--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,18 +2,30 @@
     <string name="app_name">tc-andr-manage</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_staff_edit">StaffEditActivity</string>
+    <!-- Toast String -->
+    <string name="error_phone_num">手机号码不正确</string>
+    <string name="user_not_exist">账号不存在</string>
+    <string name="user_disable">账号已被禁用</string>
+    <string name="wrong_password">用户名密码不匹配</string>
+    <!-- LoginFragment -->
     <string name="login">登入</string>
+    <string name="input_phone_num">请输入手机号</string>
+    <string name="input_password">请输入密码</string>
+    <string name="forget_password">忘记密码?</string>
+    <string name="register">注册</string>
+
+
+    <!-- MissionFragment -->
     <string name="mission">任务</string>
     <string name="bill">开单</string>
-    <string name="pickupgoods">待接送货</string>
+    <string name="pickup_goods">待接送货</string>
     <string name="order">待接单</string>
     <string name="logistics">物流追踪</string>
-    <string name="storageAndStowage">库存与配载</string>
-    <string name="inputPhoneNum">请输入手机号</string>
-    <string name="inputPSW">请输入密码</string>
-    <string name="forgetPSW">忘记密码?</string>
-    <string name="register">注册</string>
+    <string name="storage_and_stowage">库存与配载</string>
+
+    <!-- MyHomeFragment -->
     <string name="my">我的</string>
     <string name="logout">退出登入</string>
     <string name="aboutTC">关于通灿物流宝</string>
+
 </resources>
