--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,16 @@
     <string name="app_name">tc-andr-manage</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_staff_edit">StaffEditActivity</string>
+    <string name="ordering">待接单</string>
+    <string name="order_disscuss">洽谈中</string>
+    <string name="ordering_storagedetail">待入库</string>
     <!-- Toast String -->
     <string name="error_phone_num">手机号码不正确</string>
     <string name="user_not_exist">账号不存在</string>
     <string name="user_disable">账号已被禁用</string>
     <string name="wrong_password">用户名密码不匹配</string>
+    <string name="network_error">网络错误</string>
+    <string name="server_error">服务器错误</string>
     <!-- LoginFragment -->
     <string name="login">登入</string>
     <string name="input_phone_num">请输入手机号</string>
@@ -27,5 +32,32 @@
     <string name="my">我的</string>
     <string name="logout">退出登入</string>
     <string name="aboutTC">关于通灿物流宝</string>
+
+
+    <!-- MyInfoFragment -->
+    <string name="verify_idcard">身份证验证</string>
+    <string name="idcard_front">身份证正面照</string>
+    <string name="idcard_back">身份证反面照</string>
+    <string name="name">姓名</string>
+    <string name="input_your_name">尊姓大名</string>
+    <string name="idcard_num">身份证号码</string>
+    <string name="input_idcard">填写身份证号码</string>
+    <string name="address">住址</string>
+    <string name="input_address">填写地址</string>
+    <string name="phone">手机号码</string>
+    <string name="branch">所属网点</string>
+    <string name="branch_a">网点A</string>
+    <string name="modify_phone">修改手机号码</string>
+    <string name="reset_psw">重置密码</string>
+
+    <!--ResetPWFragment -->
+    <string name="find_psw">找回密码</string>
+    <string name="input_verify_code">请输入验证码</string>
+    <string name="get_verify_code">获取验证码</string>
+    <string name="remember_psw">想起密码了</string>
+
+    <!--RegisterFragment -->
+    <string name="input_password_again">请再次输入密码</string>
+
 
 </resources>
